exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the first of the list) 1`] = `
<withRouter(Viewer)
  current="33dda00f0eec15bc3b3c59a615001ac8"
  dispatch={[Function]}
  next="33dda00f0eec15bc3b3c59a615001ac9"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ac8",
    }
  }
  previous="33dda00f0eec15bc3b3c59a615001ad0"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the last of the list) 1`] = `
<withRouter(Viewer)
  current="33dda00f0eec15bc3b3c59a615001ad0"
  dispatch={[Function]}
  next="33dda00f0eec15bc3b3c59a615001ac8"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ad0",
    }
  }
  previous="33dda00f0eec15bc3b3c59a615001ac9"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the middle of the list) 1`] = `
<withRouter(Viewer)
  current="33dda00f0eec15bc3b3c59a615001ac9"
  dispatch={[Function]}
  next="33dda00f0eec15bc3b3c59a615001ad0"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ac9",
    }
  }
  previous="33dda00f0eec15bc3b3c59a615001ac8"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should handle correctly onClick events for next pictures 1`] = `
<div
  className="pho-viewer-wrapper"
  role="viewer">
  <_translate />
  <div
    className="pho-viewer-content">
    <a
      className="pho-viewer-nav-previous"
      onClick={[Function]}
      role="button" />
    <div
      className="pho-viewer-photo">
      <img
        src="http://cozy.local:8080/files/download/33dda00f0eec15bc3b3c59a615001ac8" />
    </div>
    <a
      className="pho-viewer-nav-next"
      onClick={[Function]}
      role="button" />
  </div>
</div>
`;

exports[`Viewer component should handle correctly onClick events for previous pictures 1`] = `
<div
  className="pho-viewer-wrapper"
  role="viewer">
  <_translate />
  <div
    className="pho-viewer-content">
    <a
      className="pho-viewer-nav-previous"
      onClick={[Function]}
      role="button" />
    <div
      className="pho-viewer-photo">
      <img
        src="http://cozy.local:8080/files/download/33dda00f0eec15bc3b3c59a615001ac8" />
    </div>
    <a
      className="pho-viewer-nav-next"
      onClick={[Function]}
      role="button" />
  </div>
</div>
`;
